// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentStatus component Should render well when the state is synced 1`] = `
Array [
  <span
    class="euiToolTipAnchor"
  >
    <div
      class="euiHealth euiHealth--textSizeS wz-flex"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--success euiIcon-isLoading"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
  </span>,
  <span
    class="hide-agent-status"
  >
    synced
  </span>,
]
`;

exports[`AgentStatus component should render well when the state is not synced 1`] = `
Array [
  <span
    class="euiToolTipAnchor"
  >
    <div
      class="euiHealth euiHealth--textSizeS wz-flex"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--subdued"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="4"
            />
          </svg>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
  </span>,
  <span
    class="hide-agent-status"
  >
    not synced
  </span>,
]
`;
